--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
 body {
   margin: 0;
-  padding: 20px 0 0 0;
+  padding: 0px 0 0 0;
   font-family: sans-serif;
+}
+
+.container {
+  padding: 20px 0 0 0;
 }
 
 .clickable {
